works/envoyGateway/hostname/443/HttpToHttps.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-redirect-route
  namespace: default
spec:
  parentRefs:
  - name: my-gateway
    sectionName: http # 👈 仅绑定到 80 端口
  hostnames:
  - "nginx.fakecyber.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
