works/envoyGateway/hostname/443/HttpsToApp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-https-route
  namespace: default
spec:
  parentRefs:
  - name: my-gateway
    sectionName: https # 👈 仅绑定到 443 端口
  hostnames:
  - "nginx.fakecyber.com"
  rules:
  - backendRefs:
    - name: nginx
      port: 80
